# glass-react

./: .gitignore  API.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.lib.json  vite.config.ts  vite.demo.config.ts  vitest.config.ts
.planning/: HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
demo/: App.tsx  GlassRendererHarness.tsx  index.html  main.tsx
demo/controls/: ColorControl.tsx  ControlPanel.tsx  SelectControl.tsx  SliderControl.tsx  presets.ts  tokens.ts
engine/: CMakeLists.txt
engine/src/: background_engine.cpp  background_engine.h  main.cpp
engine/src/shaders/: blit.wgsl.h  glass.wgsl.h  image_blit.wgsl.h  noise.wgsl.h
ios-reference/: capture.sh
ios-reference/GlassReference/: ContentView.swift  GlassReferenceApp.swift
ios-reference/GlassReference.xcodeproj/: project.pbxproj
pipeline/: diff.ts  tune.ts
pipeline/lib/: capture-ios.ts  capture-web.ts  compare.ts  config.ts  dev-server.ts  normalize.ts  report.ts  scorer.ts  tuner.ts
src/: App.tsx  index.ts
src/components/: GlassButton.tsx  GlassCard.tsx  GlassEffectContainer.tsx  GlassPanel.tsx  GlassProvider.tsx  types.ts  (+1 more)
tests/: glass-renderer.spec.ts  showcase-e2e.spec.ts
(+223 files in other folders)
